--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@expo/vector-icons": "^14.0.2",
     "@react-navigation/bottom-tabs": "^7.0.0",
     "@react-navigation/native": "^7.0.0",
+    "@react-navigation/native-stack": "^7.1.14",
     "app-accidenttrack": "file:",
     "expo": "~52.0.11",
     "expo-blur": "~14.0.1",
