--- a/package.json
+++ b/package.json
@@ -28,16 +28,21 @@
     "expo-image-picker": "^16.0.3",
     "expo-linking": "~7.0.3",
     "expo-location": "^18.0.3",
-    "expo-router": "^3.1.0",
+    "expo-router": "^4.0.11",
     "expo-splash-screen": "~0.29.13",
     "expo-status-bar": "~2.0.0",
     "expo-symbols": "~0.2.0",
     "expo-system-ui": "~4.0.4",
     "expo-web-browser": "~14.0.1",
+    "express": "^4.21.1",
+    "firebase": "^11.0.2",
+    "node-fetch": "^3.3.2",
     "react": "18.3.1",
     "react-dom": "18.3.1",
     "react-native": "^0.76.3",
+    "react-native-geocoding": "^0.5.0",
     "react-native-gesture-handler": "~2.20.2",
+    "react-native-maps": "1.18.0",
     "react-native-reanimated": "~3.16.1",
     "react-native-safe-area-context": "4.12.0",
     "react-native-screens": "~4.1.0",
