--- a/package.json
+++ b/package.json
@@ -25,21 +25,20 @@
     "expo-constants": "~17.0.3",
     "expo-font": "~13.0.1",
     "expo-haptics": "~14.0.0",
-    "expo-image-picker": "^16.0.3",
+    "expo-image-picker": "~16.0.3",
     "expo-linking": "~7.0.3",
-    "expo-location": "^18.0.3",
-    "expo-router": "^4.0.11",
+    "expo-location": "~18.0.3",
+    "expo-router": "~4.0.11",
     "expo-splash-screen": "~0.29.13",
     "expo-status-bar": "~2.0.0",
     "expo-symbols": "~0.2.0",
-    "expo-system-ui": "~4.0.4",
-    "expo-web-browser": "~14.0.1",
+    "expo-system-ui": "~4.0.5",
     "express": "^4.21.1",
     "firebase": "^11.0.2",
     "node-fetch": "^3.3.2",
     "react": "18.3.1",
     "react-dom": "18.3.1",
-    "react-native": "^0.76.3",
+    "react-native": "0.76.3",
     "react-native-geocoding": "^0.5.0",
     "react-native-gesture-handler": "~2.20.2",
     "react-native-maps": "1.18.0",
@@ -55,8 +54,8 @@
     "@types/react": "~18.3.12",
     "@types/react-native": "^0.73.0",
     "@types/react-test-renderer": "^18.3.0",
-    "jest": "^29.2.1",
-    "jest-expo": "~52.0.2",
+    "jest": "~29.7.0",
+    "jest-expo": "^52.0.0",
     "react-test-renderer": "18.3.1",
     "typescript": "^5.3.3"
   },
